// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/HotspotContent basic 1`] = `
<div
  className="storybook-container"
>
  <div
    className="bx--tooltip__label"
    id="tooltipTrigger"
  >
    <div
      aria-controls="tooltip"
      aria-expanded={true}
      className="bx--tooltip__trigger"
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="button"
      tabIndex={0}
    >
      <svg
        aria-hidden={true}
        description={null}
        fill="currentColor"
        focusable="false"
        height={16}
        preserveAspectRatio="xMidYMid meet"
        role={null}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.5 11L8.5 6.5 6.5 6.5 6.5 7.5 7.5 7.5 7.5 11 6 11 6 12 10 12 10 11zM8 3.5c-.4 0-.8.3-.8.8S7.6 5 8 5c.4 0 .8-.3.8-.8S8.4 3.5 8 3.5z"
        />
        <path
          d="M8,15c-3.9,0-7-3.1-7-7s3.1-7,7-7s7,3.1,7,7S11.9,15,8,15z M8,2C4.7,2,2,4.7,2,8s2.7,6,6,6s6-2.7,6-6S11.3,2,8,2z"
        />
      </svg>
    </div>
  </div>
  <div
    onBlur={[Function]}
  >
    <span
      className="bx--visually-hidden"
      role="link"
      tabIndex="0"
    >
      Focus sentinel
    </span>
    <div
      className="bx--tooltip bx--tooltip--shown bx--tooltip--right bx--tooltip--align-center"
      data-floating-menu-direction="right"
      id="tooltip"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      open={true}
      style={
        Object {
          "left": "0px",
          "opacity": 1,
          "position": "absolute",
          "right": "auto",
          "top": "3px",
        }
      }
    >
      <span
        className="bx--tooltip__caret"
      />
      <div
        className="bx--tooltip__content"
        role="dialog"
      >
        <div
          className="iot--hotspot-content"
        >
          <h4
            title="Hotspot title"
          >
            Hotspot title
          </h4>
          <p
            className="iot--hotspot-content-description"
          >
            description
          </p>
          <div
            className="iot--hotspot-content-attribute"
          >
            <div
              className="iot--hotspot-content-label-section"
            >
              <span
                className="iot--hotspot-content-label"
              >
                Temperature
                :
              </span>
            </div>
            <div
              className="iot--hotspot-content-threshold-section"
            >
              <span
                className="iot--hotspot-content-threshold"
                style={
                  Object {
                    "--threshold-color": "inherit ",
                    "--threshold-padding": "0rem",
                  }
                }
              >
                35.4
              </span>
            </div>
          </div>
          <div
            className="iot--hotspot-content-attribute"
          >
            <div
              className="iot--hotspot-content-label-section"
            >
              <span
                className="iot--hotspot-content-label"
              >
                Humidity
                :
              </span>
            </div>
            <div
              className="iot--hotspot-content-threshold-section"
            >
              <span
                className="iot--hotspot-content-threshold"
                style={
                  Object {
                    "--threshold-color": "inherit ",
                    "--threshold-padding": "0rem",
                  }
                }
              >
                99.0
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      className="bx--visually-hidden"
      role="link"
      tabIndex="0"
    >
      Focus sentinel
    </span>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/HotspotContent basic with units and precision 1`] = `
<div
  className="storybook-container"
>
  <div
    className="bx--tooltip__label"
    id="tooltipTrigger"
  >
    <div
      aria-controls="tooltip"
      aria-expanded={true}
      className="bx--tooltip__trigger"
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="button"
      tabIndex={0}
    >
      <svg
        aria-hidden={true}
        description={null}
        fill="currentColor"
        focusable="false"
        height={16}
        preserveAspectRatio="xMidYMid meet"
        role={null}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.5 11L8.5 6.5 6.5 6.5 6.5 7.5 7.5 7.5 7.5 11 6 11 6 12 10 12 10 11zM8 3.5c-.4 0-.8.3-.8.8S7.6 5 8 5c.4 0 .8-.3.8-.8S8.4 3.5 8 3.5z"
        />
        <path
          d="M8,15c-3.9,0-7-3.1-7-7s3.1-7,7-7s7,3.1,7,7S11.9,15,8,15z M8,2C4.7,2,2,4.7,2,8s2.7,6,6,6s6-2.7,6-6S11.3,2,8,2z"
        />
      </svg>
    </div>
  </div>
  <div
    onBlur={[Function]}
  >
    <span
      className="bx--visually-hidden"
      role="link"
      tabIndex="0"
    >
      Focus sentinel
    </span>
    <div
      className="bx--tooltip bx--tooltip--shown bx--tooltip--right bx--tooltip--align-center"
      data-floating-menu-direction="right"
      id="tooltip"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      open={true}
      style={
        Object {
          "left": "0px",
          "opacity": 1,
          "position": "absolute",
          "right": "auto",
          "top": "3px",
        }
      }
    >
      <span
        className="bx--tooltip__caret"
      />
      <div
        className="bx--tooltip__content"
        role="dialog"
      >
        <div
          className="iot--hotspot-content"
        >
          <h4
            title="Hotspot title"
          >
            Hotspot title
          </h4>
          <p
            className="iot--hotspot-content-description"
          >
            description
          </p>
          <div
            className="iot--hotspot-content-attribute"
          >
            <div
              className="iot--hotspot-content-label-section"
            >
              <span
                className="iot--hotspot-content-label"
              >
                Temperature
                :
              </span>
            </div>
            <div
              className="iot--hotspot-content-threshold-section"
            >
              <span
                className="iot--hotspot-content-threshold"
                style={
                  Object {
                    "--threshold-color": "inherit ",
                    "--threshold-padding": "0rem",
                  }
                }
              >
                35.350
                <span
                  className="iot--hotspot-content-unit"
                >
                  C
                </span>
              </span>
            </div>
          </div>
          <div
            className="iot--hotspot-content-attribute"
          >
            <div
              className="iot--hotspot-content-label-section"
            >
              <span
                className="iot--hotspot-content-label"
              >
                Humidity
                :
              </span>
            </div>
            <div
              className="iot--hotspot-content-threshold-section"
            >
              <span
                className="iot--hotspot-content-threshold"
                style={
                  Object {
                    "--threshold-color": "inherit ",
                    "--threshold-padding": "0rem",
                  }
                }
              >
                99
                <span
                  className="iot--hotspot-content-unit"
                >
                  %
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      className="bx--visually-hidden"
      role="link"
      tabIndex="0"
    >
      Focus sentinel
    </span>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/HotspotContent empty values 1`] = `
<div
  className="storybook-container"
>
  <div
    className="bx--tooltip__label"
    id="tooltipTrigger"
  >
    <div
      aria-controls="tooltip"
      aria-expanded={true}
      className="bx--tooltip__trigger"
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="button"
      tabIndex={0}
    >
      <svg
        aria-hidden={true}
        description={null}
        fill="currentColor"
        focusable="false"
        height={16}
        preserveAspectRatio="xMidYMid meet"
        role={null}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.5 11L8.5 6.5 6.5 6.5 6.5 7.5 7.5 7.5 7.5 11 6 11 6 12 10 12 10 11zM8 3.5c-.4 0-.8.3-.8.8S7.6 5 8 5c.4 0 .8-.3.8-.8S8.4 3.5 8 3.5z"
        />
        <path
          d="M8,15c-3.9,0-7-3.1-7-7s3.1-7,7-7s7,3.1,7,7S11.9,15,8,15z M8,2C4.7,2,2,4.7,2,8s2.7,6,6,6s6-2.7,6-6S11.3,2,8,2z"
        />
      </svg>
    </div>
  </div>
  <div
    onBlur={[Function]}
  >
    <span
      className="bx--visually-hidden"
      role="link"
      tabIndex="0"
    >
      Focus sentinel
    </span>
    <div
      className="bx--tooltip bx--tooltip--shown bx--tooltip--right bx--tooltip--align-center"
      data-floating-menu-direction="right"
      id="tooltip"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      open={true}
      style={
        Object {
          "left": "0px",
          "opacity": 1,
          "position": "absolute",
          "right": "auto",
          "top": "3px",
        }
      }
    >
      <span
        className="bx--tooltip__caret"
      />
      <div
        className="bx--tooltip__content"
        role="dialog"
      >
        <div
          className="iot--hotspot-content"
        >
          <h4
            title="Hotspot title"
          >
            Hotspot title
          </h4>
          <p
            className="iot--hotspot-content-description"
          >
            description
          </p>
          <div
            className="iot--hotspot-content-attribute"
          >
            <div
              className="iot--hotspot-content-label-section"
            >
              <span
                className="iot--hotspot-content-label"
              >
                Temperature
                :
              </span>
            </div>
            <div
              className="iot--hotspot-content-threshold-section"
            >
              <span
                className="iot--hotspot-content-threshold"
                style={
                  Object {
                    "--threshold-color": "inherit ",
                    "--threshold-padding": "0rem",
                  }
                }
              >
                --
              </span>
            </div>
          </div>
          <div
            className="iot--hotspot-content-attribute"
          >
            <div
              className="iot--hotspot-content-label-section"
            >
              <span
                className="iot--hotspot-content-label"
              >
                Humidity
                :
              </span>
            </div>
            <div
              className="iot--hotspot-content-threshold-section"
            >
              <span
                className="iot--hotspot-content-threshold"
                style={
                  Object {
                    "--threshold-color": "inherit ",
                    "--threshold-padding": "0rem",
                  }
                }
              >
                --
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      className="bx--visually-hidden"
      role="link"
      tabIndex="0"
    >
      Focus sentinel
    </span>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/HotspotContent locale 1`] = `
<div
  className="storybook-container"
>
  <div
    className="bx--tooltip__label"
    id="tooltipTrigger"
  >
    <div
      aria-controls="tooltip"
      aria-expanded={true}
      className="bx--tooltip__trigger"
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="button"
      tabIndex={0}
    >
      <svg
        aria-hidden={true}
        description={null}
        fill="currentColor"
        focusable="false"
        height={16}
        preserveAspectRatio="xMidYMid meet"
        role={null}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.5 11L8.5 6.5 6.5 6.5 6.5 7.5 7.5 7.5 7.5 11 6 11 6 12 10 12 10 11zM8 3.5c-.4 0-.8.3-.8.8S7.6 5 8 5c.4 0 .8-.3.8-.8S8.4 3.5 8 3.5z"
        />
        <path
          d="M8,15c-3.9,0-7-3.1-7-7s3.1-7,7-7s7,3.1,7,7S11.9,15,8,15z M8,2C4.7,2,2,4.7,2,8s2.7,6,6,6s6-2.7,6-6S11.3,2,8,2z"
        />
      </svg>
    </div>
  </div>
  <div
    onBlur={[Function]}
  >
    <span
      className="bx--visually-hidden"
      role="link"
      tabIndex="0"
    >
      Focus sentinel
    </span>
    <div
      className="bx--tooltip bx--tooltip--shown bx--tooltip--right bx--tooltip--align-center"
      data-floating-menu-direction="right"
      id="tooltip"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      open={true}
      style={
        Object {
          "left": "0px",
          "opacity": 1,
          "position": "absolute",
          "right": "auto",
          "top": "3px",
        }
      }
    >
      <span
        className="bx--tooltip__caret"
      />
      <div
        className="bx--tooltip__content"
        role="dialog"
      >
        <div
          className="iot--hotspot-content"
        >
          <h4
            title="Hotspot title"
          >
            Hotspot title
          </h4>
          <p
            className="iot--hotspot-content-description"
          >
            description
          </p>
          <div
            className="iot--hotspot-content-attribute"
          >
            <div
              className="iot--hotspot-content-label-section"
            >
              <span
                className="iot--hotspot-content-label"
              >
                Temperature
                :
              </span>
            </div>
            <div
              className="iot--hotspot-content-threshold-section"
            >
              <svg
                data-testid="card-icon"
                fill="#da1e28"
                focusable="true"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                tabIndex="0"
                title="temperature > 30,5"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8,1C4.1,1,1,4.1,1,8s3.1,7,7,7s7-3.1,7-7S11.9,1,8,1z M8,14c-3.3,0-6-2.7-6-6s2.7-6,6-6s6,2.7,6,6S11.3,14,8,14z"
                />
                <path
                  d="M7.5 4H8.5V9H7.5zM8 10.2c-.4 0-.8.3-.8.8s.3.8.8.8c.4 0 .8-.3.8-.8S8.4 10.2 8 10.2z"
                />
                <title>
                  temperature &gt; 30,5
                </title>
              </svg>
              <span
                className="iot--hotspot-content-threshold"
                style={
                  Object {
                    "--threshold-color": "inherit ",
                    "--threshold-padding": "0.25rem",
                  }
                }
              >
                35,350
                <span
                  className="iot--hotspot-content-unit"
                >
                  C
                </span>
              </span>
            </div>
          </div>
          <div
            className="iot--hotspot-content-attribute"
          >
            <div
              className="iot--hotspot-content-label-section"
            >
              <span
                className="iot--hotspot-content-label"
              >
                Humidity
                :
              </span>
            </div>
            <div
              className="iot--hotspot-content-threshold-section"
            >
              <svg
                data-testid="card-icon"
                fill="#da1e28"
                focusable="true"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                tabIndex="0"
                title="humidity < 100"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8,1C4.1,1,1,4.1,1,8s3.1,7,7,7s7-3.1,7-7S11.9,1,8,1z M8,14c-3.3,0-6-2.7-6-6s2.7-6,6-6s6,2.7,6,6S11.3,14,8,14z"
                />
                <path
                  d="M7.5 4H8.5V9H7.5zM8 10.2c-.4 0-.8.3-.8.8s.3.8.8.8c.4 0 .8-.3.8-.8S8.4 10.2 8 10.2z"
                />
                <title>
                  humidity &lt; 100
                </title>
              </svg>
              <span
                className="iot--hotspot-content-threshold"
                style={
                  Object {
                    "--threshold-color": "inherit ",
                    "--threshold-padding": "0.25rem",
                  }
                }
              >
                99
                <span
                  className="iot--hotspot-content-unit"
                >
                  %
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      className="bx--visually-hidden"
      role="link"
      tabIndex="0"
    >
      Focus sentinel
    </span>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/HotspotContent with thresholds 1`] = `
<div
  className="storybook-container"
>
  <div
    className="bx--tooltip__label"
    id="tooltipTrigger"
  >
    <div
      aria-controls="tooltip"
      aria-expanded={true}
      className="bx--tooltip__trigger"
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="button"
      tabIndex={0}
    >
      <svg
        aria-hidden={true}
        description={null}
        fill="currentColor"
        focusable="false"
        height={16}
        preserveAspectRatio="xMidYMid meet"
        role={null}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.5 11L8.5 6.5 6.5 6.5 6.5 7.5 7.5 7.5 7.5 11 6 11 6 12 10 12 10 11zM8 3.5c-.4 0-.8.3-.8.8S7.6 5 8 5c.4 0 .8-.3.8-.8S8.4 3.5 8 3.5z"
        />
        <path
          d="M8,15c-3.9,0-7-3.1-7-7s3.1-7,7-7s7,3.1,7,7S11.9,15,8,15z M8,2C4.7,2,2,4.7,2,8s2.7,6,6,6s6-2.7,6-6S11.3,2,8,2z"
        />
      </svg>
    </div>
  </div>
  <div
    onBlur={[Function]}
  >
    <span
      className="bx--visually-hidden"
      role="link"
      tabIndex="0"
    >
      Focus sentinel
    </span>
    <div
      className="bx--tooltip bx--tooltip--shown bx--tooltip--right bx--tooltip--align-center"
      data-floating-menu-direction="right"
      id="tooltip"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      open={true}
      style={
        Object {
          "left": "0px",
          "opacity": 1,
          "position": "absolute",
          "right": "auto",
          "top": "3px",
        }
      }
    >
      <span
        className="bx--tooltip__caret"
      />
      <div
        className="bx--tooltip__content"
        role="dialog"
      >
        <div
          className="iot--hotspot-content"
        >
          <h4
            title="Hotspot title"
          >
            Hotspot title
          </h4>
          <p
            className="iot--hotspot-content-description"
          >
            description
          </p>
          <div
            className="iot--hotspot-content-attribute"
          >
            <div
              className="iot--hotspot-content-label-section"
            >
              <span
                className="iot--hotspot-content-label"
              >
                Temperature
                :
              </span>
            </div>
            <div
              className="iot--hotspot-content-threshold-section"
            >
              <svg
                data-testid="card-icon"
                fill="#da1e28"
                focusable="true"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                tabIndex="0"
                title="temperature > 30"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8,1C4.1,1,1,4.1,1,8s3.1,7,7,7s7-3.1,7-7S11.9,1,8,1z M8,14c-3.3,0-6-2.7-6-6s2.7-6,6-6s6,2.7,6,6S11.3,14,8,14z"
                />
                <path
                  d="M7.5 4H8.5V9H7.5zM8 10.2c-.4 0-.8.3-.8.8s.3.8.8.8c.4 0 .8-.3.8-.8S8.4 10.2 8 10.2z"
                />
                <title>
                  temperature &gt; 30
                </title>
              </svg>
              <span
                className="iot--hotspot-content-threshold"
                style={
                  Object {
                    "--threshold-color": "inherit ",
                    "--threshold-padding": "0.25rem",
                  }
                }
              >
                35.350
                <span
                  className="iot--hotspot-content-unit"
                >
                  C
                </span>
              </span>
            </div>
          </div>
          <div
            className="iot--hotspot-content-attribute"
          >
            <div
              className="iot--hotspot-content-label-section"
            >
              <span
                className="iot--hotspot-content-label"
              >
                Humidity
                :
              </span>
            </div>
            <div
              className="iot--hotspot-content-threshold-section"
            >
              <svg
                data-testid="card-icon"
                fill="#da1e28"
                focusable="true"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                tabIndex="0"
                title="humidity < 100"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8,1C4.1,1,1,4.1,1,8s3.1,7,7,7s7-3.1,7-7S11.9,1,8,1z M8,14c-3.3,0-6-2.7-6-6s2.7-6,6-6s6,2.7,6,6S11.3,14,8,14z"
                />
                <path
                  d="M7.5 4H8.5V9H7.5zM8 10.2c-.4 0-.8.3-.8.8s.3.8.8.8c.4 0 .8-.3.8-.8S8.4 10.2 8 10.2z"
                />
                <title>
                  humidity &lt; 100
                </title>
              </svg>
              <span
                className="iot--hotspot-content-threshold"
                style={
                  Object {
                    "--threshold-color": "inherit ",
                    "--threshold-padding": "0.25rem",
                  }
                }
              >
                99
                <span
                  className="iot--hotspot-content-unit"
                >
                  %
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      className="bx--visually-hidden"
      role="link"
      tabIndex="0"
    >
      Focus sentinel
    </span>
  </div>
</div>
`;
